hphp/hack/test/typecheck/expression_trees/shapes/shape_put_wrong.php.exp
ERROR: File "shape_put_wrong.php", line 9, characters 10-152:
Invalid return type (Typing[4110])
  File "shape_put_wrong.php", line 8, characters 33-42:
  Expected `int`
  File "expr_tree.php", line 161, characters 38-41:
  But got `bool`
ERROR: File "shape_put_wrong.php", line 19, characters 5-47:
Too many positional arguments (expected 3 but got 4) (Typing[4105])
  File "Shapes.hhi", line 108, characters 28-30:
  Definition is here
ERROR: File "shape_put_wrong.php", line 22, characters 5-32:
Too few positional arguments (required 3 but got 1) (Typing[4104])
  File "Shapes.hhi", line 108, characters 28-30:
  Definition is here
ERROR: File "shape_put_wrong.php", line 25, characters 34-39:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shape_put_wrong.php", line 28, characters 26-28:
Invalid argument (Typing[4110])
  File "Shapes.hhi", line 109, characters 7-16:
  Expected `shape(...)`
  File "expr_tree.php", line 164, characters 40-45:
  But got `string`
ERROR: File "shape_put_wrong.php", line 28, characters 26-28:
Invalid assignment (Typing[4110])
  File "shape_put_wrong.php", line 28, characters 26-28:
  Expected `string`
  File "expr_tree.php", line 155, characters 39-41:
  But got `int`
ERROR: File "shape_put_wrong.php", line 28, characters 26-28:
Invalid index type for this array (Typing[4324])
  File "shape_put_wrong.php", line 28, characters 31-33:
  Expected `int`
  File "expr_tree.php", line 164, characters 40-45:
  This can only be indexed with integers
  File "shape_put_wrong.php", line 28, characters 31-33:
  But got `string`
